--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sgs-khadamati-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
     "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
@@ -16,6 +16,7 @@
     "chalk": "^4.0.0",
     "date-and-time": "^0.13.1",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.0",
     "sequelize": "^5.21.11",
     "tedious": "^8.3.0"
   },
