--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.17.1",
     "node-fetch": "^2.6.0",
     "sequelize": "^5.21.11",
-    "tedious": "^8.3.0"
+    "tedious": "^8.3.0",
+    "validator": "^13.1.1"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
