--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
   "name": "sgs-khadamati-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "Frontend APIs for ui clients",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
-    "test": "env-cmd -f ./config/dev.env nodemon  playground/db.js"
+    "prod": "env-cmd -f ./config/vars.prod.env nodemon src/index.js",
+    "dev": "env-cmd -f ./config/vars.dev.env nodemon src/index.js",
+    "qlt": "env-cmd -f ./config/vars.qlt.env nodemon src/index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Sameer Mohammed Al Harbi",
   "license": "ISC",
   "dependencies": {
-    "@abujude/sgs-khadamati": "^1.2.7",
-    "body-parser": "^1.19.0",
+    "@abujude/sgs-khadamati": "^1.3.6",
     "chalk": "^4.0.0",
-    "date-and-time": "^0.13.1",
     "express": "^4.17.1",
     "node-fetch": "^2.6.0",
     "sequelize": "^5.21.11",
@@ -24,6 +23,6 @@
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.9"
   }
 }
